2019-02-03 Fix status labels break on epic issues list

--- a/jira-compact.user.css
+++ b/jira-compact.user.css
@@ -53,6 +53,9 @@ code, kbd, tt {
 .aui-lozenge{
 	padding: 1px 2px;
 }
+td.status .aui-lozenge{
+	white-space: nowrap;
+}
 
 /***************************************/
 /*** Compact left search list sidebar **/
